# jarvis-whisper-api

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gpu  Dockerfile.rocm  README.md  alembic.ini  apply_migrations.sh  docker-compose.dev.yaml  docker-compose.gpu.yaml  docker-compose.prod.yaml  docker-compose.yaml  env.template  full-setup-dev.sh  full-setup-prod.sh  pyproject.toml  requirements.txt  run-dev.sh  run-docker-dev.sh  run-prod.sh  run.sh  setup-whisper-cpp.sh  start-prod.sh  stop-prod.sh
.github/workflows/: docker-build-push.yml  docker-build.yaml  test.yml
alembic/: env.py
alembic/versions/: 001_create_settings_table.py  002_seed_settings.py
app/: audio.py  deps.py  exceptions.py  main.py  service_config.py  utils.py  whisper_engine.py
app/api/: voice_profiles.py
app/db/: __init__.py  models.py  session.py
app/services/: __init__.py  settings_definitions.py  settings_service.py
docs/: PRD-speech-recognition-enhancements.md  pywhispercpp-migration-plan.md
scripts/: apply_migrations.py
tests/: test_audio.py  test_deps.py  test_exceptions.py  test_main.py  test_service_config.py  test_settings.py  test_utils.py  test_voice_profiles.py  test_whisper_engine.py
